# comborace

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/public/: real-match.json
app/scripts/: build-car-sprites.py  shoot-3d.mjs  shoot-crash.mjs  shoot-landing.mjs  shoot.mjs  verify-endgame.mjs
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
assets-3d/blender/: car_common.py  car_crash.py  car_hero.py  contact_sheet.py  normalize_frames.py  render_set.sh
data/: real-match.jsonl  sample-match.jsonl
docs/: GAME_DESIGN.md  TXLINE_API_NOTE.md  TXLINE_CAPABILITIES.md
docs-site/: index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/guide/: architecture.md  game-mechanic.md  how-it-works.md  introduction.md  roadmap.md  txline-integration.md
program/: .gitignore  Anchor.toml  README.md
program/programs/combo_race/: Cargo.toml
program/programs/combo_race/src/: lib.rs
scripts/: build-app-replay.mjs  capture-mock.mjs  generate-sample-match.mjs  record-match.mjs  replay-match.mjs  txline-activate.mjs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/scratch/: deploy.sh  probe-validate-stat.mjs  settle-flow.mjs  settle-verified-flow.mjs  settle-verified-receipt.json  txline-borsh.mjs
sdk/src/: client.ts  codec.ts  constants.ts  index.ts  mock.ts  pda.ts  types.ts
server/: package-lock.json  package.json  tsconfig.json
server/src/: config.ts  index.ts  log.ts
(+40 files in other folders)
