[package]
name = "combo_race"
version = "0.1.0"
description = "ComboRace lobby escrow: fixed USDC buy-in pool, off-chain winner, non-custodial payout"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "combo_race"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
